# raspberry

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ReadMe.txt  toolchain-rpi.cmake
Application/test/: testMain.c
HAL/BSP/include/: i2c.h  spi.h  type.h  uart.h  usb.h
HAL/BSP/src/: i2c.c  uart.c  usb.c
app/src/: SPIMain.c
bsp/include/: tm4c.hpp
bsp/src/: tm4c.cpp
docs/: System specification.docx
drivers/src/: spi.c
src/: main.c
test/: a.out
